--- a/src/assets/css/containers/index.scss
+++ b/src/assets/css/containers/index.scss
@@ -1,3 +1,4 @@
 @import './Header.scss';
 @import './Footer.scss';
 @import './ModalConfirmSendForm.scss';
+@import './ModalApproverDetailDiary.scss';
