--- a/src/includes/components/Button.pug
+++ b/src/includes/components/Button.pug
@@ -4,11 +4,11 @@ mixin Button({ className = '', variant = 'btn-success', type = 'button', size = 
       if (icon)
         i(class=`${icon}`)
 
-      =title
+      span.Button-title=title
 
   else
     button.Button.btn(class=`${className} ${!title && icon ? 'btn-icon' : ''} ${circle ? 'circle' : ''} ${variant} ${size} ${badge ? 'Button-badge' : ''}` type=`${type}` data-toggle=modalId ? "modal" : false data-target=modalId ? `#${modalId}` : false)
       if (icon)
         i(class=`${icon}`)
 
-      =title
+      span.Button-title=title
