--- a/src/assets/css/components/ScrollSpy.scss
+++ b/src/assets/css/components/ScrollSpy.scss
@@ -17,4 +17,65 @@
       }
     }
   }
+
+  &-drawer-mobile {
+    @media (max-width: 991px) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 100;
+      pointer-events: none;
+      opacity: 0;
+      transition: $common-transition;
+
+      &.active {
+        opacity: 1;
+        pointer-events: unset;
+
+        .ScrollSpy-drawer-mobile {
+          &-main {
+            transform: translateX(0)
+          }
+        }
+      }
+
+      &-overlay {
+        @include fullAbsolute;
+        z-index: 1;
+        background: rgba($black, 0.5);
+      }
+
+      &-main {
+        position: absolute;
+        z-index: 2;
+        background: $white;
+        height: 100%;
+        width: 300px;
+        right: 0;
+        transform: translateX(100%);
+        transition: $common-transition;
+
+        .navbar-toggler {
+          border-radius: 0;
+        }
+
+        .ScrollSpy {
+          .Card {
+            border: none;
+          }
+
+          .card-header {
+            display: none !important;
+          }
+
+          .navbar-nav {
+            box-shadow: none;
+            border: none !important;
+          }
+        }
+      }
+    }
+  }
 }
