--- a/src/includes/components/ScrollSpy.pug
+++ b/src/includes/components/ScrollSpy.pug
@@ -2,7 +2,7 @@ mixin ScrollSpy({ title, id, parentId, endId, options = [], showChildren })
   //- Navbar
   <div class="ScrollSpy navbar-vertical navbar-expand-lg">
     //- Navbar Toggle
-    button.navbar-toggler.btn.btn-block.btn-white.mb-3(type="button" aria-label="Toggle navigation" aria-expanded="false" aria-controls=`${parentId}` data-toggle="collapse" data-target=`#${parentId}`)
+    button.active.navbar-toggler.btn.btn-block.btn-white.mb-3(type="button" aria-label="Toggle navigation" aria-expanded="false" aria-controls=`${parentId}` data-toggle="collapse" data-target=`#${parentId}`)
       <span class="d-flex justify-content-between align-items-center">
         span.h5.mb-0= title
 
@@ -18,7 +18,7 @@ mixin ScrollSpy({ title, id, parentId, endId, options = [], showChildren })
     //- End Navbar Toggle
 
     //- Navbar Collapse
-    .collapse.navbar-collapse(id=`${parentId}`)
+    .collapse.navbar-collapse.show(id=`${parentId}`)
       .ScrollSpy-wrapper.js-sticky-block.js-scrollspy(id=`${id}` data-hs-sticky-block-options=`{ "parentSelector": "#${parentId}", "targetSelector": "#header", "startPoint": "#${parentId}", "endPoint": "#${endId}", "stickyOffsetTop": 8 }`)
         if showChildren
           block
